# fixed-deposit-calculator

./: .gitignore  README.md  amey_investments.py  app.py  encrypt_data.py  fd_calculator.py  generate_password_hash.py  google_calendar.py  pyproject.toml  quickstart.py
fixed_deposit_calculator/: app.py  data.xlsx.enc  fd_calculator.py  formatter.py
